# python-project-83

./: .coverage  .gitignore  Makefile  README.md  build.sh  coverage.xml  database.sql  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  lint.yml  my_workflow.yml
.github/workflows/tests/: test_app.py
page_analyzer/: app.py  database.py  parser.py  url_normalizer.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
tests/: test_app.py
