[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = [
    "hexlet-code",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
